--- a/index.html
+++ b/index.html
@@ -3,67 +3,80 @@
 <title>primer parcial</title>
 </head>
 <body>
+<acronym title="VCSs">sistema de control de verciones</acronym>
 <h1>1.3 Empezando - Fundamentos de Git</h1>
 
 <h2>Fundamentos de Git</h2>
 
-<p>Entonces, ¿qué es Git en pocas palabras? Es muy importante asimilar esta sección, porque si entiendes lo que es Git y los fundamentos de cómo funciona, probablemente te sea mucho más fácil usar Git de manera eficaz. A medida que aprendas Git, intenta olvidar todo lo que puedas saber sobre otros VCSs, como Subversion y Perforce; hacerlo te ayudará a evitar confusiones sutiles a la hora de utilizar la herramienta. Git almacena y modela la información de forma muy diferente a esos otros sistemas, a pesar de que su interfaz sea bastante similar; comprender esas diferencias evitará que te confundas a la hora de usarlo.</p>
+<p>Entonces, ¿qu&aacute; es Git en pocas palabras? Es muy importante asimilar esta secci&aacute;n, porque si entiendes lo que es Git y los fundamentos de c&aacute;mo funciona, probablemente te sea mucho m&aacute;s f&aacute;cil usar Git de manera eficaz. A medida que aprendas Git, intenta olvidar todo lo que puedas saber sobre otros VCSs, como Subversion y Perforce; hacerlo te ayudar&aacute; a evitar confusiones sutiles a la hora de utilizar la herramienta. Git almacena y modela la informaci&aacute;n de forma muy diferente a esos otros sistemas, a pesar de que su interfaz sea bastante similar; comprender esas diferencias evitar&aacute; que te confundas a la hora de usarlo.</p>
 
-<h2>Instantáneas, no diferencias</h2>
+<h2>Instant&aacute;neas, no diferencias</h2>
 
-<p>La principal diferencia entre Git y cualquier otro VCS (Subversion y compañía incluidos) es cómo Git modela sus datos. Conceptualmente, la mayoría de los demás sistemas almacenan la información como una lista de cambios en los archivos. Estos sistemas (CVS, Subversion, Perforce, Bazaar, etc.) modelan la información que almacenan como un conjunto de archivos y las modificaciones hechas sobre cada uno de ellos a lo largo del tiempo, como ilustra la Figura 1-4.</p>
+<p>La principal diferencia entre Git y cualquier otro VCS (Subversion y compa&aacute;&aacute;a incluidos) es c&aacute;mo Git modela sus datos. Conceptualmente, la mayor&aacute;a de los dem&aacute;s sistemas almacenan la informaci&aacute;n como una lista de cambios en los archivos. Estos sistemas (CVS, Subversion, Perforce, Bazaar, etc.) modelan la informaci&aacute;n que almacenan como un conjunto de archivos y las modificaciones hechas sobre cada uno de ellos a lo largo del tiempo, como ilustra la Figura 1-4.</p>
 
-
-
-<p>Figura 1-4. Otros sistemas tienden a almacenar los datos como cambios de cada archivo respecto a una versión base.
-Git no modela ni almacena sus datos de este modo. En cambio, Git modela sus datos más como un conjunto de instantáneas de un mini sistema de archivos. Cada vez que confirmas un cambio, o guardas el estado de tu proyecto en Git, él básicamente hace una foto del aspecto de todos tus archivos en ese momento, y guarda una referencia a esa instantánea. Para ser eficiente, si los archivos no se han modificado, Git no almacena el archivo de nuevo, sólo un enlace al archivo anterior idéntico que ya tiene almacenado. Git modela sus datos más como en la Figura 1-5.</p>
+<img src="imagenes/img1.png"/>
 
 
 
-<p>Figura 1-5. Git almacena la información como instantáneas del proyecto a lo largo del tiempo.
-Esta es una distinción importante entre Git y prácticamente todos los demás VCSs. Hace que Git reconsidere casi todos los aspectos del control de versiones que muchos de los demás sistemas copiaron de la generación anterior. Esto hace que Git se parezca más a un mini sistema de archivos con algunas herramientas tremendamente potentes construidas sobre él, que a un VCS. Exploraremos algunos de los beneficios que obtienes al modelar tus datos de esta manera cuando veamos ramificaciones (branching) en Git en el Capítulo 3.</p>
+<p>Figura 1-4. Otros sistemas tienden a almacenar los datos como cambios de cada archivo respecto a una versi&aacute;n base.
+Git no modela ni almacena sus datos de este modo. En cambio, Git modela sus datos m&aacute;s como un conjunto de instant&aacute;neas de un mini sistema de archivos. Cada vez que confirmas un cambio, o guardas el estado de tu proyecto en Git, &aacute;l b&aacute;sicamente hace una foto del aspecto de todos tus archivos en ese momento, y guarda una referencia a esa instant&aacute;nea. Para ser eficiente, si los archivos no se han modificado, Git no almacena el archivo de nuevo, s&aacute;lo un enlace al archivo anterior id&aacute;ntico que ya tiene almacenado. Git modela sus datos m&aacute;s como en la Figura 1-5.</p>
 
-<h2>Casi cualquier operación es local</h2>
+<img src="imagenes/img2.png" />
 
-<p>La mayoría de las operaciones en Git sólo necesitan archivos y recursos locales para operar. Por lo general no se necesita información de ningún otro ordenador de tu red. Si estás acostumbrado a un CVCS donde la mayoría de las operaciones tienen esa sobrecarga del retardo de la red, este aspecto de Git te va a hacer pensar que los dioses de la velocidad han bendecido Git con poderes sobrenaturales. Como tienes toda la historia del proyecto ahí mismo, en tu disco local, la mayoría de las operaciones parecen prácticamente inmediatas.</p>
 
-<p>Por ejemplo, para navegar por la historia del proyecto, Git no necesita salir al servidor para obtener la historia y mostrártela, simplemente la lee directamente de tu base de datos local. Esto significa que ves la historia del proyecto casi al instante. Si quieres ver los cambios introducidos en un archivo entre la versión actual y la de hace un mes, Git puede buscar el archivo hace un mes y hacer un cálculo de diferencias localmente, en lugar de tener que pedirle a un servidor remoto que lo haga, u obtener una versión antigua desde la red y hacerlo de manera local.</p>
+<p>Figura 1-5. Git almacena la informaci&aacute;n como instant&aacute;neas del proyecto a lo largo del tiempo.
+Esta es una distinci&aacute;n importante entre Git y pr&aacute;cticamente todos los dem&aacute;s VCSs. Hace que Git reconsidere casi todos los aspectos del control de versiones que muchos de los dem&aacute;s sistemas copiaron de la generaci&aacute;n anterior. Esto hace que Git se parezca m&aacute;s a un mini sistema de archivos con algunas herramientas tremendamente potentes construidas sobre &aacute;l, que a un VCS. Exploraremos algunos de los beneficios que obtienes al modelar tus datos de esta manera cuando veamos ramificaciones (branching) en Git en el Cap&aacute;tulo 3.</p>
 
-<p>Esto también significa que hay muy poco que no puedas hacer si estás desconectado o sin VPN. Si te subes a un avión o a un tren y quieres trabajar un poco, puedes confirmar tus cambios felizmente hasta que consigas una conexión de red para subirlos. Si te vas a casa y no consigues que tu cliente VPN funcione correctamente, puedes seguir trabajando. En muchos otros sistemas, esto es imposible o muy doloroso. En Perforce, por ejemplo, no puedes hacer mucho cuando no estás conectado al servidor; y en Subversion y CVS, puedes editar archivos, pero no puedes confirmar los cambios a tu base de datos (porque tu base de datos no tiene conexión). Esto puede no parecer gran cosa, pero te sorprendería la diferencia que</p> puede suponer.
+<h2>Casi cualquier operaci&aacute;n es local</h2>
 
-Git tiene integridad
-Todo en Git es verificado mediante una suma de comprobación (checksum en inglés) antes de ser almacenado, y es identificado a partir de ese momento mediante dicha suma. Esto significa que es imposible cambiar los contenidos de cualquier archivo o directorio sin que Git lo sepa. Esta funcionalidad está integrada en Git al más bajo nivel y es parte integral de su filosofía. No puedes perder información durante su transmisión o sufrir corrupción de archivos sin que Git lo detecte.
+<p>La mayor&aacute;a de las operaciones en Git s&aacute;lo necesitan archivos y recursos locales para operar. Por lo general no se necesita informaci&aacute;n de ningún otro ordenador de tu red. Si est&aacute;s acostumbrado a un CVCS donde la mayor&aacute;a de las operaciones tienen esa sobrecarga del retardo de la red, este aspecto de Git te va a hacer pensar que los dioses de la velocidad han bendecido Git con poderes sobrenaturales. Como tienes toda la historia del proyecto ah&aacute; mismo, en tu disco local, la mayor&aacute;a de las operaciones parecen pr&aacute;cticamente inmediatas.</p>
 
-El mecanismo que usa Git para generar esta suma de comprobación se conoce como hash SHA-1. Se trata de una cadena de 40 caracteres hexadecimales (0-9 y a-f), y se calcula en base a los contenidos del archivo o estructura de directorios. Un hash SHA-1 tiene esta pinta:
+<p>Por ejemplo, para navegar por la historia del proyecto, Git no necesita salir al servidor para obtener la historia y mostr&aacute;rtela, simplemente la lee directamente de tu base de datos local. Esto significa que ves la historia del proyecto casi al instante. Si quieres ver los cambios introducidos en un archivo entre la versi&aacute;n actual y la de hace un mes, Git puede buscar el archivo hace un mes y hacer un c&aacute;lculo de diferencias localmente, en lugar de tener que pedirle a un servidor remoto que lo haga, u obtener una versi&aacute;n antigua desde la red y hacerlo de manera local.</p>
+
+<p>Esto tambi&aacute;n significa que hay muy poco que no puedas hacer si est&aacute;s desconectado o sin VPN. Si te subes a un avi&aacute;n o a un tren y quieres trabajar un poco, puedes confirmar tus cambios felizmente hasta que consigas una conexi&aacute;n de red para subirlos. Si te vas a casa y no consigues que tu cliente VPN funcione correctamente, puedes seguir trabajando. En muchos otros sistemas, esto es imposible o muy doloroso. En Perforce, por ejemplo, no puedes hacer mucho cuando no est&aacute;s conectado al servidor; y en Subversion y CVS, puedes editar archivos, pero no puedes confirmar los cambios a tu base de datos (porque tu base de datos no tiene conexi&aacute;n). Esto puede no parecer gran cosa, pero te sorprender&aacute;a la diferencia que</p> puede suponer.
+
+<h2>Git tiene integridad</h2>
+
+<p>Todo en Git es verificado mediante una suma de comprobaci&aacute;n (checksum en ingl&aacute;s) antes de ser almacenado, y es identificado a partir de ese momento mediante dicha suma. Esto significa que es imposible cambiar los contenidos de cualquier archivo o directorio sin que Git lo sepa. Esta funcionalidad est&aacute; integrada en Git al m&aacute;s bajo nivel y es parte integral de su filosof&aacute;a. No puedes perder informaci&aacute;n durante su transmisi&aacute;n o sufrir corrupci&aacute;n de archivos sin que Git lo detecte.</p>
+
+<p>El mecanismo que usa Git para generar esta suma de comprobaci&aacute;n se conoce como hash SHA-1. Se trata de una cadena de 40 caracteres hexadecimales (0-9 y a-f), y se calcula en base a los contenidos del archivo o estructura de directorios. Un hash SHA-1 tiene esta pinta:</p>
 
 24b9da6552252987aa493b52f8696cd6d3b00373
-Verás estos valores hash por todos lados en Git, ya que los usa con mucha frecuencia. De hecho, Git guarda todo no por nombre de archivo, sino por el valor hash de sus contenidos.
 
-Git generalmente sólo añade información
-Cuando realizas acciones en Git, casi todas ellas sólo añaden información a la base de datos de Git. Es muy difícil conseguir que el sistema haga algo que no se pueda deshacer, o que de algún modo borre información. Como en cualquier VCS, puedes perder o estropear cambios que no has confirmado todavía; pero después de confirmar una instantánea en Git, es muy difícil de perder, especialmente si envías (push) tu base de datos a otro repositorio con regularidad.
+<p>Ver&aacute;s estos valores hash por todos lados en Git, ya que los usa con mucha frecuencia. De hecho, Git guarda todo no por nombre de archivo, sino por el valor hash de sus contenidos.</p>
 
-Esto hace que usar Git sea un placer, porque sabemos que podemos experimentar sin peligro de fastidiar gravemente las cosas. Para un análisis más exhaustivo de cómo almacena Git su información y cómo puedes recuperar datos aparentemente perdidos, ver Capítulo 9.
+<h2>Git generalmente s&aacute;lo a&aacute;ade informaci&aacute;n</h2>
 
-Los tres estados
-Ahora presta atención. Esto es lo más importante a recordar acerca de Git si quieres que el resto de tu proceso de aprendizaje prosiga sin problemas. Git tiene tres estados principales en los que se pueden encontrar tus archivos: confirmado (committed), modificado (modified), y preparado (staged). Confirmado significa que los datos están almacenados de manera segura en tu base de datos local. Modificado significa que has modificado el archivo pero todavía no lo has confirmado a tu base de datos. Preparado significa que has marcado un archivo modificado en su versión actual para que vaya en tu próxima confirmación.
+<p>Cuando realizas acciones en Git, casi todas ellas s&aacute;lo a&aacute;aden informaci&aacute;n a la base de datos de Git. Es muy dif&aacute;cil conseguir que el sistema haga algo que no se pueda deshacer, o que de algún modo borre informaci&aacute;n. Como en cualquier VCS, puedes perder o estropear cambios que no has confirmado todav&aacute;a; pero despu&aacute;s de confirmar una instant&aacute;nea en Git, es muy dif&aacute;cil de perder, especialmente si env&aacute;as (push) tu base de datos a otro repositorio con regularidad.</p>
 
-Esto nos lleva a las tres secciones principales de un proyecto de Git: el directorio de Git (Git directory), el directorio de trabajo (working directory), y el área de preparación (staging area).
+<p>Esto hace que usar Git sea un placer, porque sabemos que podemos experimentar sin peligro de fastidiar gravemente las cosas. Para un an&aacute;lisis m&aacute;s exhaustivo de c&aacute;mo almacena Git su informaci&aacute;n y c&aacute;mo puedes recuperar datos aparentemente perdidos, ver Cap&aacute;tulo 9.</p>
 
+<h2>Los tres estados</h2>
 
+<p>Ahora presta atenci&aacute;n. Esto es lo m&aacute;s importante a recordar acerca de Git si quieres que el resto de tu proceso de aprendizaje prosiga sin problemas. Git tiene tres estados principales en los que se pueden encontrar tus archivos: confirmado (committed), modificado (modified), y preparado (staged). Confirmado significa que los datos est&aacute;n almacenados de manera segura en tu base de datos local. Modificado significa que has modificado el archivo pero todav&aacute;a no lo has confirmado a tu base de datos. Preparado significa que has marcado un archivo modificado en su versi&aacute;n actual para que vaya en tu pr&aacute;xima confirmaci&aacute;n.</>
 
-Figura 1-6. Directorio de trabajo, área de preparación y directorio de Git.
-El directorio de Git es donde Git almacena los metadatos y la base de datos de objetos para tu proyecto. Es la parte más importante de Git, y es lo que se copia cuando clonas un repositorio desde otro ordenador.
+<p>Esto nos lleva a las tres secciones principales de un proyecto de Git: el directorio de Git (Git directory), el directorio de trabajo (working directory), y el &aacute;rea de preparaci&aacute;n (staging area).<p>
 
-El directorio de trabajo es una copia de una versión del proyecto. Estos archivos se sacan de la base de datos comprimida en el directorio de Git, y se colocan en disco para que los puedas usar o modificar.
+<img src="imagenes/img3.png" />
 
-El área de preparación es un sencillo archivo, generalmente contenido en tu directorio de Git, que almacena información acerca de lo que va a ir en tu próxima confirmación. A veces se le denomina índice, pero se está convirtiendo en estándar el referirse a ella como el área de preparación.
+Figura 1-6. Directorio de trabajo, &aacute;rea de preparaci&aacute;n y directorio de Git.
+El directorio de Git es donde Git almacena los metadatos y la base de datos de objetos para tu proyecto. Es la parte m&aacute;s importante de Git, y es lo que se copia cuando clonas un repositorio desde otro ordenador.
 
-El flujo de trabajo básico en Git es algo así:
+El directorio de trabajo es una copia de una versi&aacute;n del proyecto. Estos archivos se sacan de la base de datos comprimida en el directorio de Git, y se colocan en disco para que los puedas usar o modificar.
 
-Modificas una serie de archivos en tu directorio de trabajo.
-Preparas los archivos, añadiendolos a tu área de preparación.
-Confirmas los cambios, lo que toma los archivos tal y como están en el área de preparación, y almacena esas instantáneas de manera permanente en tu directorio de Git.
-Si una versión concreta de un archivo está en el directorio de Git, se considera confirmada (committed). Si ha sufrido cambios desde que se obtuvo del repositorio, pero ha sido añadida al área de preparación, está preparada (staged). Y si ha sufrido cambios desde que se obtuvo del repositorio, pero no se ha preparado, está modificada (modified). En el Capítulo 2 aprenderás más acerca de estos estados, y de cómo puedes aprovecharte de ellos o saltarte toda la parte de preparación.
+El &aacute;rea de preparaci&aacute;n es un sencillo archivo, generalmente contenido en tu directorio de Git, que almacena informaci&aacute;n acerca de lo que va a ir en tu pr&aacute;xima confirmaci&aacute;n. A veces se le denomina &aacute;ndice, pero se est&aacute; convirtiendo en est&aacute;ndar el referirse a ella como el &aacute;rea de preparaci&aacute;n.
+
+<ul>El flujo de trabajo b&aacute;sico en Git es algo as&aacute;:
+
+<li>1.Modificas una serie de archivos en tu directorio de trabajo.</li>
+<li>2.Preparas los archivos, a&aacute;adiendolos a tu &aacute;rea de preparaci&aacute;n.</li>
+<li>3.Confirmas los cambios, lo que toma los archivos tal y como est&aacute;n en el &aacute;rea de preparaci&aacute;n, y almacena esas instant&aacute;neas de manera permanente en tu directorio de Git.</li>
+</ul>
+<p>Si una versi&aacute;n concreta de un archivo est&aacute; en el directorio de Git, se considera confirmada (committed). Si ha sufrido cambios desde que se obtuvo del repositorio, pero ha sido a&aacute;adida al &aacute;rea de preparaci&aacute;n, est&aacute; preparada (staged). Y si ha sufrido cambios desde que se obtuvo del repositorio, pero no se ha preparado, est&aacute; modificada (modified). En el Cap&aacute;tulo 2 aprender&aacute;s m&aacute;s acerca de estos estados, y de c&aacute;mo puedes aprovecharte de ellos o saltarte toda la parte de preparaci&aacute;n.</p>
+
+</body>
+</html>
+
 
 
 
