--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
 <head>
 <title>primer parcial</title>
+<link rel="stylesheet" type="text/css" href="estilos.css">
 </head>
 <body>
+<a name=inicio> </a>
+<a href=#abajo>ir a mis enlaces</a>
+
+
+
 <acronym title="VCSs">sistema de control de verciones</acronym>
 <h1>1.3 Empezando - Fundamentos de Git</h1>
 
@@ -74,6 +80,9 @@ El &aacute;rea de preparaci&aacute;n es un sencillo archivo, generalmente conten
 </ul>
 <p>Si una versi&aacute;n concreta de un archivo est&aacute; en el directorio de Git, se considera confirmada (committed). Si ha sufrido cambios desde que se obtuvo del repositorio, pero ha sido a&aacute;adida al &aacute;rea de preparaci&aacute;n, est&aacute; preparada (staged). Y si ha sufrido cambios desde que se obtuvo del repositorio, pero no se ha preparado, est&aacute; modificada (modified). En el Cap&aacute;tulo 2 aprender&aacute;s m&aacute;s acerca de estos estados, y de c&aacute;mo puedes aprovecharte de ellos o saltarte toda la parte de preparaci&aacute;n.</p>
 
+<a name=abajo> </a>
+<a href="tabla/mitabla.html">Vaya a ver mitabla </a></br>
+ <a href=#inicio>Ir arriba</a>
 </body>
 </html>
 
